# SceneForge

./: .gitignore  AGENTS.md  BEFORE_README.md  LICENSE  README.md  current_changes.md  generate.py  project_preferences.md  pyproject.toml  pytest.ini  requirements.txt  run.py  structure.md
BackgroundReconstruction/: __init__.py  empty_room.py
Docs/: architecture.md  empty_room_vggt_background_design.md  integration_contract.md  plane_detection_design.md  remove_scene_composition_quick_fixes_design.md  segmentation.md  support_plane_placement_optimization_design.md  three_d_regen_model_fitting_reference.md  three_d_regen_sam3d_implementation_design.md  tree.md  vggt_bounding_box_only_design.md  vggt_sam3_obb_design.md
EdgeDetection/: dexined_provider.py  no_edge_provider.py  simple_edge_provider.py  types.py
Input/: __init__.py
MeshReconstruction/: no_mesh_provider.py  triposr_provider.py  types.py
ObjectCompletion/: __init__.py  flux_fill.py  openai_image.py  sdxl_inpaint.py
ObjectEnrichment/: crops.py  edge_metrics.py  fusion.py  geometry_classifier.py  geometry_scores.py  pipeline.py  report_loader.py  report_writer.py  types.py
ObjectReconstruction/: __init__.py  hunyuan3d_objects.py  sam3d_objects.py  triposr_objects.py  triposr_provider.py  types.py
OutputWriter/: __init__.py  depth_colormap.py  evidence_overlay.py  metrics_summary.py  object_masks.py  overlay.py  report_writer.py
PrimitiveFitting/: __init__.py  blender_exporter.py  camera.py  depth_check.py  depth_refiner.py  fitter.py  masks.py  pipeline.py  report_loader.py  report_writer.py  (+1 more)
(+269 files in other folders)
